--- a/Figures/steel_case.tex
+++ b/Figures/steel_case.tex
@@ -17,8 +17,8 @@
 \usetikzlibrary{decorations.text}
 
 % Paths and variables
-\def \data {../results/rolling_horizon_stochastic_22.csv}
-\def \refr {../results/perfect_foresight_stochastic_31.csv}
+\def \data {../results/scenario_1_74.csv}
+\def \refr {../results/scenario_1_74.csv}
 \def \from {2024}
 \def \till {2054}
 
