--- a/Figures/steel_prices_summary.tex
+++ b/Figures/steel_prices_summary.tex
@@ -20,35 +20,17 @@
 
 \def \sens {1}
 
-%\def \dataai {../results/scenario_\sens_53.csv}
-%\def \databi {../results/scenario_\sens_56.csv}
-%\def \dataci {../results/scenario_\sens_57.csv}
-%\def \datadi {../results/scenario_\sens_59.csv}
-%\def \dataei {../results/scenario_\sens_61.csv}
-%
-%\def \dataaii {../results/scenario_\sens_62.csv}
-%\def \databii {../results/scenario_\sens_64.csv}
-%\def \datacii {../results/scenario_\sens_65.csv}
-%\def \datadii {../results/scenario_\sens_66.csv}
-%\def \dataeii {../results/scenario_\sens_67.csv}
-%
-%\def \dataa {../results/scenario_\sens_43.csv}
-%\def \datab {../results/scenario_\sens_46.csv}
-%\def \datac {../results/scenario_\sens_47.csv}
-%\def \datad {../results/scenario_\sens_48.csv}
-%\def \datae {../results/scenario_\sens_49.csv}
+\def \dataai {../results/scenario_\sens_78.csv} % 50
+\def \databi {../results/scenario_\sens_79.csv} % 15
+\def \dataci {../results/scenario_\sens_80.csv} % 10
+\def \datadi {../results/scenario_\sens_81.csv} % 8
+\def \dataei {../results/scenario_\sens_83.csv} %  6
 
-\def \dataai {../results/scenario_\sens_81.csv} % 50
-\def \databi {../results/scenario_\sens_82.csv} % 15
-\def \dataci {../results/scenario_\sens_83.csv} % 10
-\def \datadi {../results/scenario_\sens_84.csv} % 8
-\def \dataei {../results/scenario_\sens_86.csv} %  6
-
-\def \dataaii {../results/scenario_\sens_90.csv}
-\def \databii {../results/scenario_\sens_91.csv}
-\def \datacii {../results/scenario_\sens_92.csv}
-\def \datadii {../results/scenario_\sens_93.csv}
-\def \dataeii {../results/scenario_\sens_95.csv}
+\def \dataaii {../results/scenario_\sens_84.csv}
+\def \databii {../results/scenario_\sens_85.csv}
+\def \datacii {../results/scenario_\sens_86.csv}
+\def \datadii {../results/scenario_\sens_87.csv}
+\def \dataeii {../results/scenario_\sens_89.csv}
 
 \def \dataa {../results/scenario_\sens_71.csv}
 \def \datab {../results/scenario_\sens_73.csv}
@@ -56,6 +38,24 @@
 \def \datad {../results/scenario_\sens_75.csv}
 \def \datae {../results/scenario_\sens_77.csv}
 
+\def \dataaiq {../results/scenario_\sens_97.csv} % 50
+\def \databiq {../results/scenario_\sens_98.csv} % 15
+\def \dataciq {../results/scenario_\sens_99.csv} % 10
+\def \datadiq {../results/scenario_\sens_100.csv} % 8
+\def \dataeiq {../results/scenario_\sens_102.csv} %  6
+
+\def \dataaiiq {../results/scenario_\sens_97.csv}
+\def \databiiq {../results/scenario_\sens_104.csv}
+\def \dataciiq {../results/scenario_\sens_105.csv}
+\def \datadiiq {../results/scenario_\sens_97.csv}
+\def \dataeiiq {../results/scenario_\sens_97.csv}
+
+\def \dataaq {../results/scenario_\sens_97.csv} %adapted
+\def \databq {../results/scenario_\sens_92.csv}
+\def \datacq {../results/scenario_\sens_93.csv}
+\def \datadq {../results/scenario_\sens_94.csv}
+\def \dataeq {../results/scenario_\sens_96.csv} %adapted
+                    
 \def \refr {../results/scenario_32.csv}
 \def \from {2024}
 \def \till {2050}
